--- a/readme
+++ b/readme
@@ -1,3 +1,5 @@
 Hello!
 
-Just thought I would feature my [gists](https://gist.github.com/kylesethgray) here. 
+Just thought I would feature my gists here. 
+
+https://gist.github.com/kylesethgray
